# aurilion

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  models.rs  tests.rs
src/models/: champion_details.rs  champions.rs  items.rs
src/models/champions/: champion.rs
src/models/champions/champion/: image.rs  info.rs  stats.rs
src/models/items/: basic.rs  group.rs  item_info.rs  tree.rs
src/models/items/basic/: gold.rs  rune.rs  stats.rs
